--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "band-schedule-app",
   "version": "1.0.0",
-  "description": "Band schedule management application with Vercel KV storage",
+  "description": "Band schedule management application with JSON file storage",
   "main": "index.html",
   "scripts": {
     "dev": "vercel dev",
     "build": "echo 'No build step required'"
   },
-  "dependencies": {
-    "@vercel/kv": "^1.0.1",
-    "@vercel/edge-config": "^1.0.1"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=18.x"
   }
